dataset1235/2025-2/1153765216/users/2249779960/executions/2372395858_2332513434.log
== SUBMISSION (2025-08-28 18:33:04)
-- CODE: 
dolar = float(input())
real = dolar * 3.22
print(round(real, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:33:37)
-- CODE: 
dolar = float(input())
real = dolar * 3.22
print(round(real, 2))
-- EXECUTION TIME: 
0.0125
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:19:42)
-- CODE: 
Valoremdolares = float(input())
Valoremreais = valor em dolares 3.22
print(round(valoremreais, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 2
    Valoremreais = valor em dolares 3.22
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 2
    Valoremreais = valor em dolares 3.22
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 2
    Valoremreais = valor em dolares 3.22
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 2
    Valoremreais = valor em dolares 3.22
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    Valoremreais = valor em dolares 3.22
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 2
    Valoremreais = valor em dolares 3.22
                         ^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 2
    Valoremreais = valor em dolares 3.22
                         ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:33:38)
-- CODE: 
dolar = float(input())
real = dolar * 3.22
print(round(real, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:36:45)
-- CODE: 
dolar = float(input())
real = dolar * 0.70
print(round(real, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:33:03)
-- CODE: 
dolar = float(input())
real = dolar * 3.22
print(round(real, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:21:34)
-- CODE: 
Valoremdolares = float(input())
Valoremreais = Valoremdolares 3,22
print(round(Valoremreais, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3,22
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3,22
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3,22
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3,22
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3,22
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3,22
                                  ^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3,22
                                  ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:26:55)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:31:13)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:35:27)
-- CODE: 
dolar = float(input())
real = dolar * 3.22
print(round(real, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:20:40)
-- CODE: 
Valoremdolares = float(input())
Valoremreais = Valoremdolares 3.22
print(round(Valoremreais, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3.22
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3.22
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3.22
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3.22
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3.22
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3.22
                                  ^^^^
SyntaxError: invalid syntax
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 2
    Valoremreais = Valoremdolares 3.22
                                  ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:32:48)
-- CODE: 
dolar=float(input())
real=dolar*3.22
print(round(real, 2))
-- EXECUTION TIME: 
0.0125
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:27:17)
-- CODE: 
dolar = float(input())
real = dolar*3.22
print(round(real,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:32:50)
-- CODE: 
dolar=float(input())
real=dolar*3.22
print(round(real, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
12.88
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
25.76
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
48.3
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
41.86
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
19.32
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
28.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
